--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,5 +1,11 @@
 <body>
     <a style="color:mediumblue"; href="{% url 'learning_logs:index' %}">Learning Logs</a>    |      <a style="color:mediumblue" href="{% url 'learning_logs:topics' %}">Topics</a>
+    {% if user.is_authenticated %}
+        Hello, {{ user.username }}.
+        <a href="{% url 'users:logout' %}">Log Out</a>
+    {% else %}
+        <a href="{% url 'users:login' %}">Log In</a>
+    {% endif %}
 </body>
 
 {% block content %} {% endblock content %} <!--template vairables-->
