--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,7 +1,7 @@
 {% extends "learning_logs/base.html" %} <!-- Allows us to inherit from base html file, thus keeping a site-wide heade, for example-->
 {% block content %}
     <h1>Welcome to Learning Logs</h1>
-    <body style="text-align:center;">
+    <body>
         Learning Logs helps you keep track of your learning for any topic you're learning about.
     </body>
 {% endblock content %} <!--only whatever between this tag and first one will show up-->
