--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,14 +1,16 @@
-{% extends "learning_logs/base.html" %} <!-- Allows us to inherit from base html file, thus keeping a site-wide heade, for example-->
-{% block content %}
+{% extends "learning_logs/base.html" %}
+{% block page_header %}
     <h1>Topics</h1>
-    <body>
-        <ul>
-            {% for topic in topics %} <!-- This is refering to the topics in the context dictionary in views.py-->
-                <li><a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a></li>
-            {% empty %}
-                <li>No topics have been added yet.</li>
-            {% endfor %}
-        </ul>
-        <a href="{% url 'learning_logs:new_topic' %}">Add a New Topic</a>
-    </body>
+{% endblock page_header %}
+{% block content %}
+    <ul>
+        {% for topic in topics %}
+            <li><h3>
+                <a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a>
+            </h3></li>
+        {% empty %}
+                <li><h3>No topics have been added yet.</h3></li>
+        {% endfor %}
+    </ul>
+    <h3><a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a></h3>
 {% endblock content %}
