--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,7 +1,11 @@
-{% extends "learning_logs/base.html" %} <!-- Allows us to inherit from base html file, thus keeping a site-wide heade, for example-->
-{% block content %}
-    <h1>Welcome to Learning Logs</h1>
-    <body>
-        Learning Logs helps you keep track of your learning for any topic you're learning about.
-    </body>
-{% endblock content %} <!--only whatever between this tag and first one will show up-->
+{% extends "learning_logs/base.html" %}
+{% block page_header %}
+<div class="jumbotron">
+    <h1 class="display-3">Track your learning.</h1>
+    <p class="lead">Make your own Learning Log, and keep a list of the
+        topics you're learning about. Whenever you learn something new
+        about a topic, make an entry summarizing what you've learned.</p>
+    <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}"
+        role="button">Register &raquo;</a>
+</div>
+{% endblock page_header %}
