--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,19 +1,20 @@
-{% extends "learning_logs/base.html" %} 
+{% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+    <h2>Log in to your account.</h2>
+{% endblock page_header %}
+
 {% block content %}
-<body>
-    {% if form.errors %}
-    <p>Your username and password did not match. Please try again.</p>
-    {% endif %}
-
-    <form action="{% url 'users:login' %}" method=POST>
+    <form method="post" action="{% url 'users:login' %}" class="form">
         {% csrf_token %}
-        {{ form.as_p }}
+        {% bootstrap_form form %}
+        {% buttons %}
+        <button name="submit" class="btn btn-primary">Log in</button>
+        {% endbuttons %}
 
-        <button name="submit">LOG IN</button>
-        <!--includes a hidden element 'next' that tells Django wehre to redirect to on a succesful login-->
-        <input type="hidden" name="next" value="{% url 'learning_logs:index' %}" />
+        <input type="hidden" name="next"
+            value="{% url 'learning_logs:index' %}" />
     </form>
-</body>
-
 
 {% endblock content %}
